--- a/随手记/config.plist
+++ b/随手记/config.plist
@@ -2,43 +2,146 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ys</key>
+	<key>ly</key>
 	<array>
 		<dict>
 			<key>name</key>
 			<string>旅游交通费</string>
 			<key>pic</key>
 			<string>d_qcp</string>
+			<key>next</key>
+			<array/>
 		</dict>
 		<dict>
 			<key>name</key>
 			<string>旅游住宿费</string>
 			<key>pic</key>
 			<string>d_fd</string>
+			<key>next</key>
+			<array/>
 		</dict>
 		<dict>
 			<key>name</key>
 			<string>旅游娱乐费</string>
 			<key>pic</key>
 			<string>icon_xxyl_fbjh</string>
+			<key>next</key>
+			<array/>
 		</dict>
 		<dict>
 			<key>name</key>
 			<string>旅游餐饮费</string>
 			<key>pic</key>
 			<string>icon_spjs_zwwc</string>
+			<key>next</key>
+			<array/>
 		</dict>
 		<dict>
 			<key>name</key>
 			<string>其他消费</string>
 			<key>pic</key>
 			<string>icon_jrbx_ajhk</string>
+			<key>next</key>
+			<array/>
 		</dict>
 		<dict>
 			<key>name</key>
 			<string>旅游用品</string>
 			<key>pic</key>
 			<string>icon_xxyl_lydj</string>
+			<key>next</key>
+			<array/>
+		</dict>
+	</array>
+	<key>bz</key>
+	<array>
+		<dict>
+			<key>name</key>
+			<string>衣服饰品</string>
+			<key>pic</key>
+			<string>icon_yfsp</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>食品酒水</string>
+			<key>pic</key>
+			<string>icon_spjs</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>居家物业</string>
+			<key>pic</key>
+			<string>icon_jjwy</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>行车交通</string>
+			<key>pic</key>
+			<string>icon_xcjt</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>交流通讯</string>
+			<key>pic</key>
+			<string>icon_jltx</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>休闲娱乐</string>
+			<key>pic</key>
+			<string>icon_xxyl</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>学习进修</string>
+			<key>pic</key>
+			<string>icon_xxjx</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>人情往来</string>
+			<key>pic</key>
+			<string>icon_rqwl</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>医疗保健</string>
+			<key>pic</key>
+			<string>icon_ylbj</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>金融保险</string>
+			<key>pic</key>
+			<string>icon_jrbx</string>
+			<key>next</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>name</key>
+			<string>其他杂项</string>
+			<key>pic</key>
+			<string>icon_qtzx</string>
+			<key>next</key>
+			<array/>
 		</dict>
 	</array>
 </dict>
